--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 
-    Copyright (C) 2006-2014 phloc systems (www.phloc.com)
     Copyright (C) 2014 Philip Helger (www.helger.com)
     philip[at]helger[dot]com
 
@@ -27,11 +26,12 @@
   </parent>
   <groupId>com.helger.maven</groupId>
   <artifactId>ph-jscompress-maven-plugin</artifactId>
-  <version>1.1.1-SNAPSHOT</version>
+  <version>1.2.0-SNAPSHOT</version>
   <packaging>maven-plugin</packaging>
   <name>ph-jscompress-maven-plugin</name>
   <description>Maven plugin for compressing JS files at build time</description>
   <url>https://github.com/phax/ph-jscompress-maven-plugin</url>
+  <inceptionYear>2014</inceptionYear>
   
   <licenses>
     <license>
@@ -61,15 +61,6 @@
       <url>http://www.helger.com</url>
     </developer>
   </developers>
-  
-  <contributors>
-    <contributor>
-      <name>Boris Gregorcic</name>
-      <email>bg(at)phloc.com</email>
-      <organization>phloc systems</organization>
-      <organizationUrl>http://www.phloc.com</organizationUrl>
-    </contributor>
-  </contributors>
  
   <properties>
     <maven.version>2.0.1</maven.version>
