--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
   </parent>
   <groupId>com.helger.maven</groupId>
   <artifactId>ph-jscompress-maven-plugin</artifactId>
-  <version>2.0.2</version>
+  <version>2.0.3-SNAPSHOT</version>
   <packaging>maven-plugin</packaging>
   <name>ph-jscompress-maven-plugin</name>
   <description>Maven plugin for compressing JS files at build time</description>
@@ -45,7 +45,7 @@
     <connection>scm:git:git@github.com:phax/ph-jscompress-maven-plugin.git</connection>
     <developerConnection>scm:git:git@github.com:phax/ph-jscompress-maven-plugin.git</developerConnection>
     <url>http://github.com/phax/ph-jscompress-maven-plugin</url>
-    <tag>ph-jscompress-maven-plugin-2.0.2</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <organization>
