--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
   </parent>
   <groupId>com.helger.maven</groupId>
   <artifactId>ph-jscompress-maven-plugin</artifactId>
-  <version>2.0.3-SNAPSHOT</version>
+  <version>2.1.0-SNAPSHOT</version>
   <packaging>maven-plugin</packaging>
   <name>ph-jscompress-maven-plugin</name>
   <description>Maven plugin for compressing JS files at build time</description>
@@ -63,7 +63,7 @@
   </developers>
  
   <properties>
-    <maven.version>2.0.1</maven.version>
+    <maven.version>3.0</maven.version>
   </properties>
   
   <dependencies>
@@ -74,14 +74,9 @@
     </dependency>
     <dependency>
       <groupId>org.apache.maven</groupId>
-      <artifactId>maven-project</artifactId>
+      <artifactId>maven-core</artifactId>
       <version>${maven.version}</version>
       <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.codehaus.plexus</groupId>
-      <artifactId>plexus-utils</artifactId>
-      <version>2.1</version>
     </dependency>
     <!-- v20140407 and on is targeting JDK 1.7 -->
     <dependency>
@@ -111,19 +106,25 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-plugin-plugin</artifactId>
         <configuration>
-          <goalPrefix>ph-jscompress</goalPrefix>
+          <goalPrefix>jscompress</goalPrefix>
         </configuration>
         <executions>
           <execution>
-            <id>mojo-descriptor</id>
+            <id>descriptor</id>
             <goals>
               <goal>descriptor</goal>
             </goals>
           </execution>
           <execution>
-            <id>help-goal</id>
+            <id>helpmojo</id>
             <goals>
               <goal>helpmojo</goal>
+            </goals>
+          </execution>
+          <execution>
+            <id>addPluginArtifactMetadata</id>
+            <goals>
+              <goal>addPluginArtifactMetadata</goal>
             </goals>
           </execution>
         </executions>
