--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,9 @@ YgvKITwzp0toIYjogRv9JWiKM9OePbAO1VBJ8kDTPzs6CfIGV/KhKHWpheVW25obF/84r8TP1du6N678
 jdk:
   - oraclejdk7
   
+install:
+  - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V -U
+  
 cache:
   directories:
   - $HOME/.m2
