--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
   <parent>
     <groupId>com.helger</groupId>
     <artifactId>parent-pom</artifactId>
-    <version>1.8.4</version>
+    <version>1.9.0</version>
   </parent>
   <groupId>com.helger.maven</groupId>
   <artifactId>ph-jscompress-maven-plugin</artifactId>
@@ -89,6 +89,11 @@
           <artifactId>ant</artifactId>
         </exclusion>
       </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <scope>test</scope>
     </dependency>
   </dependencies>
   
