--- a/.travis.yml
+++ b/.travis.yml
@@ -10,17 +10,29 @@ quIcDZ5DQhA37ylyc2d/jS0Q73BoHaVeD/9f3am00MC6ULVkyx2Dnqh2DQaOvgQlf2px4dRJPSGAt4+e
 hpHXDZgWebN+4h7nb3ReCu/wWjzx3jkfCGZF0kUsFrXhMgr48xoja0G6SPCIDHZL8Hw4ybHTy+/QSs2wp40WB7uFkvCj1TwNr2rh
 1I84QSQbhVMWJDYrurSxDz08HwqWsDINIBM/OYMtutpGKlpRrqbFlQOdg3x+/lz1zpuKKcJ0sWlLbX/o7yJ6eVFFP/9hw30puPyS
 YgvKITwzp0toIYjogRv9JWiKM9OePbAO1VBJ8kDTPzs6CfIGV/KhKHWpheVW25obF/84r8TP1du6N678vvx9wmb2Y86p6E="
-    
-jdk:
-  - oraclejdk8
   
 install:
   - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V -U
   
 cache:
   directories:
-  - $HOME/.m2
+    - $HOME/.m2
 
-after_success:
-  - mvn deploy --settings travis-settings.xml -DskipTests=true -B -P travis-deploy
+jobs:
+  include:
+    - stage: test
+      jdk: oraclejdk8
+      script:
+        - mvn test -B -P coverage
+      after_success:
+        - mvn deploy --settings travis-settings.xml -DskipTests=true -B -P travis-deploy
+        - bash <(curl -s https://codecov.io/bash)
+    - stage: test
+      jdk: oraclejdk11
+      script:
+        - mvn test -B
+    - stage: test
+      jdk: openjdk11
+      script:
+        - mvn test -B
   
