--- a/pom.xml
+++ b/pom.xml
@@ -84,10 +84,11 @@
     </dependency>
     <!-- v20140407 and on is targeting JDK 1.7 -->
     <!-- v20160822 and on is targeting JDK 1.8 -->
+    <!-- v20220601 and on is targeting JDK 11 -->
     <dependency>
       <groupId>com.google.javascript</groupId>
       <artifactId>closure-compiler</artifactId>
-      <version>v20220601</version>
+      <version>v20220502</version>
       <exclusions>
         <exclusion>
           <groupId>org.apache.ant</groupId>
@@ -98,7 +99,7 @@
     <dependency>
       <groupId>com.google.protobuf</groupId>
       <artifactId>protobuf-java</artifactId>
-      <version>3.21.1</version>
+      <version>3.21.5</version>
     </dependency>
     <dependency>
       <groupId>com.google.code.findbugs</groupId>
