--- a/pom.xml
+++ b/pom.xml
@@ -42,8 +42,8 @@
   </licenses>
   
   <scm>
-    <connection>scm:git:git@github.com:phax/ph-jscompress-maven-plugin.git</connection>
-    <developerConnection>scm:git:git@github.com:phax/ph-jscompress-maven-plugin.git</developerConnection>
+    <connection>scm:git:https://github.com/phax/ph-jscompress-maven-plugin.git</connection>
+    <developerConnection>scm:git:https://github.com/phax/ph-jscompress-maven-plugin.git</developerConnection>
     <url>http://github.com/phax/ph-jscompress-maven-plugin</url>
     <tag>HEAD</tag>
   </scm>
